error.txt
  File "/home/runner/work/self-heal-CI-CD/self-heal-CI-CD/src/bug.py", line 23
    ```python
    ^
SyntaxError: invalid syntax
